# creator-skill-generator

./: .gitignore  README.md
backend/: .env.example  .gitignore  .railwayignore  PRD.md  README.md  main.py  nixpacks.toml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  crew.py  main.py  schemas.py  service.py  storage.py  supabase_store.py
backend/examples/: creator_test_request.json
backend/testsprite_tests/: TC001_get_api_health_returns_service_status_ok.py  TC001_test_health_check_endpoint_returns_status_ok.py  TC002_post_api_v1_generate_skill_with_short_content_returns_validation_error.py  TC003_post_api_v2_generate_skill_twitter_with_empty_username_returns_validation_error.py  TC003_test_v1_generate_skill_with_short_content.py  TC004_post_api_v2_generate_skill_youtube_with_empty_url_list_returns_validation_error.py  TC005_post_api_v1_generate_skill_stream_with_short_content_returns_validation_error.py  TC005_test_v2_generate_skill_twitter_without_bearer_token.py  TC006_post_api_v2_generate_skill_stream_with_short_content_returns_validation_error.py  TC007_post_api_v2_generate_skill_twitter_stream_with_empty_username_returns_validation_error.py  TC007_test_v2_generate_skill_youtube_with_empty_url_list.py  TC008_post_api_v2_generate_skill_youtube_stream_with_empty_url_list_returns_validation_error.py  TC008_test_get_skill_detail_for_existing_skill.py  TC009_get_api_v1_skills_returns_list_of_generated_skills.py  TC009_test_delete_skill_and_verify_removal.py  TC010_get_api_v1_skills_skill_name_returns_skill_detail_with_files.py  standard_prd.json  (+9 more)
website/: package.json  (+1 more)
(+95 files in other folders)
